# CpuCagra

./: .gitignore  CMakeLists.txt  README.md  cagra.json  run.sh  webface.json
include/CpuPG/: builder.hpp  builder_cagra.hpp
include/cpupg/: builder.hpp  builder_cagra.hpp  graph.hpp  memory.hpp  parameters.hpp
src/: CMakeLists.txt  builder.cpp  builder_cagra.cpp
test/: CMakeLists.txt  test_cagra.cpp  test_cagra_nsg.cpp
